# TermGraph

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  README2.md  TermGraph.pro  TermGraph.qbs  TermGraphProject.pro  TermGraphTest.pro  conanfile.py  goodcheck.yml  installConan.sh  linuxDockerBuild.sh  project.py  rmImage.sh  runDocker.sh
TermGraph/: CMakeLists.txt  TermGraph.pro
TermGraph/Icon/: Icon.psd  Term.docx  vobla_in_a_spacesuit.psd
TermGraph/android/: AndroidManifest.xml
TermGraph/helpImages/: helpImages.qrc
TermGraph/icons/: icons.qrc
TermGraph/qml/: CMakeLists.txt  HelpPage.qml  LicensePage.qml  MainSceneView.qml  MainWindow.qml  MySettings.qml  NewNode.qml  TermGroupsList.qml  TermView.qml  main.qml  qml.qrc
TermGraph/qml/Atoms/: BottomThinLine.qml  ComboBox.qml  Hex.qml  PageHeader.qml  PageTitleLabel.qml  RightThinLine.qml  Round.qml  RoundButton.qml  SideMenuButton.qml  SquareButton.qml  Term.qml  ThinLine.qml  ToolButton.qml  ToolTip.qml  VerticalFlickable.qml
TermGraph/qml/Js/: Colors.js  Debug.js  Fonts.js  NodePaint.js  Sizes.js
TermGraph/qml/Learning/: CardsStartScreen.qml  LearnCard.qml  LearnGroupsList.qml  LearnMode.qml
TermGraph/qml/Molecules/: AppIcon.qml  BurgerButton.qml  DefaultHeader.qml  EmptyView.qml  GraphCanvas.qml  GroupsDrawer.qml  HelpCard.qml  HelpView.qml  LabelPair.qml  NodesScene.qml  Page.qml  SearchResults.qml  TagEditorArea.qml  TextArea.qml  TextField.qml
TermGraph/qml/Pages/: AppIconsSaving.qml  EditNode.qml  GroupsList.qml  Help.qml  HelpPage.qml  License.qml  MainScene.qml  NewNode.qml  (+3 more)
TermGraph/resources/: CMakeLists.txt
TermGraph/source/: CMakeLists.txt  edge.cpp  edge.h  glb.cpp  glb.h  graphicitem.cpp  graphicitem.h  icons.qrc  main.cpp  mainscene.cpp  mainscene.h  mainwindow.cpp  mainwindow.h  mysceneview.cpp  mysceneview.h  paintqueuemanager.cpp  paintqueuemanager.h  qml.qrc  rectgraphicitem.cpp  rectgraphicitem.h  reminder.cpp  reminder.h  termgraph.cpp  termgraph.h  termgroup.cpp  termgroup.h  terminfo.cpp  terminfo.h  termnode.cpp  termnode.h  tgroupname.h  wordfreqanalyze.cpp  wordfreqanalyze.h
apps/TermGraphApp/: CMakeLists.txt  CMakePresets.json  conanfile.py
apps/TermGraphBack/: CMakeLists.txt
apps/TermGraphFront/: CMakeLists.txt
examples/static_module/: CMakeLists.txt  hello.cpp  hello.h  hello_impl.cppm  main.cpp
lib/CommonTools/: CMakeLists.txt
lib/CommonToolsModule/: CMakeLists.txt  Errors.cppm  GroupUuid.cppm  HandyTypes.cppm  JsonTools.cppm  NetworkTools.cppm  Platform.cppm  SafeUuid.cppm  TermUuid.cppm  Validator.cppm
lib/Graph/: CMakeLists.txt
lib/QmlAtoms/: AccentText.qml  BottomThinLine.qml  CMakeLists.txt  ComboBox.qml  DrawerPage.qml  Hex.qml  PageHeader.qml  PinBar.qml  Round.qml  RoundButton.qml  RoundedRectangle.qml  ScrollIndicator.qml  SideMenuButton.qml  SmallInfoText.qml  SquareButton.qml  Term.qml  ThinLine.qml  ToolButton.qml  ToolTip.qml  TopRoundedRect.qml
lib/QmlMolecules/: AppIcon.qml  BurgerButton.qml  CMakeLists.txt  DefaultHeader.qml  EmptyView.qml  HelpCard.qml  HelpView.qml  LoadingIcon.qml  LoadingInProcess.qml  MainAppDrawer.qml  NodesScene.qml  NotificationDrawer.qml  Page.qml  SearchDrawer.qml  SideMenuHeader.qml  TagEditorArea.qml  TermInfoDrawer.qml  TextArea.qml  TextField.qml
lib/QmlPages/: AppIconsSaving.qml  CMakeLists.txt  EditNode.qml  GroupsList.qml  MainScene.qml  NewNode.qml  OnBoard.qml  Settings.qml  TermView.qml
lib/QmlTheme/: CMakeLists.txt  Sizes.qml  Theme.qml
lib/QmlTools/: CMakeLists.txt  Debug.qml  Tools.qml
lib/QrcHelpImages/: CMakeLists.txt
lib/StaticDataStorage/: CMakeLists.txt
lib/TermDataConnection/: CMakeLists.txt
lib/TermDataInterface/: CMakeLists.txt
lib/TermDataStorage/: CMakeLists.txt
lib/Text/: CMakeLists.txt
libs/CommonTools/: CMakeLists.txt
libs/Graph/: CMakeLists.txt
libs/QmlAtoms/: AccentText.qml  CMakeLists.txt  ComboBox.qml  DebugFrame.qml  DrawerPage.qml  Edge.qml  FlickableColumn.qml  Hex.qml  MouseArea.qml  PageHeader.qml  PageTitleLabel.qml  PinBar.qml  RightThinLine.qml  Round.qml  RoundButton.qml  RoundedRectangle.qml  ScrollIndicator.qml  SideMenuButton.qml  SmallInfoText.qml  SquareButton.qml  Term.qml  Timer.qml  ToolButton.qml  ToolTip.qml
libs/QmlMolecules/: AppIcon.qml  BurgerButton.qml  CMakeLists.txt  DefaultHeader.qml  EdgeHardeningDrawer.qml  EmptyView.qml  HelpCard.qml  HelpView.qml  LabelPair.qml  LoadingIcon.qml  LoadingInProcess.qml  MainAppDrawer.qml  NodesScene.qml  NotificationDrawer.qml  Page.qml  SearchDrawer.qml  SideMenuHeader.qml  StdDialog.qml  TagEditorArea.qml  TermInfoDrawer.qml  TextArea.qml  TextField.qml
libs/QmlPages/: AppIconsSaving.qml  CMakeLists.txt  EditNode.qml  GroupsList.qml  MainScene.qml  NewNode.qml  OnBoard.qml  Settings.qml  TermView.qml
libs/QmlStyleInfo/: CMakeLists.txt  Colors.qml  Fonts.qml  IconPath.qml  Sizes.qml
libs/QmlTheme/: CMakeLists.txt  Colors.qml  Fonts.qml  Sizes.qml  Theme.qml
libs/QmlTools/: CMakeLists.txt  Debug.qml  DebugFrame.qml  Ruler.qml
rust-cxx/: CMakeLists.txt  Readme.md
rust-cxx/cpp/: main.cc
rust-cxx/qml/: Main.qml
rust-cxx/rust/: Cargo.toml  build.rs
tests/: CMakeLists.txt  cursortest.cpp  dbworkstest.cpp  edgetest.cpp  foresttest.cpp  fsworkstest.cpp  graphicitemtest.cpp  graphtest.cpp  linkdecoratortest.cpp  linktest.cpp  linkutilstest.cpp  nodetest.cpp  textlinktest.cpp  textprocessortest.cpp  textrangetest.cpp  textsearchertest.cpp  textselectortest.cpp  textutilstest.cpp  tst_tagprocessortest.cpp  uuidstest.cpp
tests/dbworks/: CMakeLists.txt  dbworkstest.cpp
tests/fsworks/: CMakeLists.txt  fsworkstest.cpp
tests/linkUtils/: CMakeLists.txt  linkutilstest.cpp
tests/tagProcessor/: CMakeLists.txt  tagprocessortest.cpp
tests/tagProcessorTest/: tst_tagprocessortest.cpp
tests/tagUtils/: CMakeLists.txt  tagutilstest.cpp
tests/textProcessor/: CMakeLists.txt  textprocessortest.cpp
tests/textProcessorTest/: tst_textprocessortest.cpp
tests/uuids/: CMakeLists.txt
(+1532 files in other folders)
